--- a/.env
+++ b/.env
@@ -12,12 +12,12 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/whereiswhere/iB-Writer/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/zalenza/Abecedarium-theme/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=true
-dgShowLocalGraph=true
+dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
