--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ THEME=https://raw.githubusercontent.com/zalenza/Abecedarium-theme/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
