--- a/.env
+++ b/.env
@@ -17,9 +17,9 @@ BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=false
-dgShowLocalGraph=false
+dgShowLocalGraph=true
 dgShowInlineTitle=true
-dgShowFileTree=false
+dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
