--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Less Noise
+SITE_NAME_HEADER=LessNoise🧑🏻‍💻
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
@@ -12,7 +12,7 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/Bluemoondragon07/chime-theme/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/benf2004/Obsidian-LaTeX-Theme/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
